Fixes for UI on mobile

--- a/pathways/client/src/App.css
+++ b/pathways/client/src/App.css
@@ -13,8 +13,8 @@ body {
   align-items: center; }
 
 .App {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 64px 1fr 1fr 1fr 48px;
